# PLGR-distor

./: Cargo.toml  Makefile  README.md  gen_sample.sh
src/: main.rs  token.json
testnet/: investor.entries  investor.key  owner.entries  owner.key  receiver.list
