[package]
name = "plgr"
version = "0.1.0"
edition = "2021"

[dependencies]
ruc = "1.0"
secp256k1 = "0.20"
tokio = "1.15.0"
serde_json = "1.0"
web3 = { git = "https://gitee.com/kt10/rust-web3", branch = "master", default-features = false, features = ["http-rustls-tls", "signing", "ipc-tokio"] }
clap = { version = "3.0.4", features = ["derive"] }
