[package]
name = "plgr"
version = "0.2.0"
edition = "2021"

[dependencies]
ruc = "1.0"
secp256k1 = "0.21"
tokio = "1.17.0"
serde_json = "1.0"
web3 = { version = "0.18.0", default-features = false, features = ["http-rustls-tls", "signing", "ipc-tokio"] }
clap = { version = "3", features = ["derive"] }
